--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,16 +1,10 @@
-.card-small {
-    width: 400px;
+html {
+  font-family: GillSans, Calibri, Trebuchet, sans-serif;
 }
-
-
 
 .card {
   padding-top: 0px;
   padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
