--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,10 +1,10 @@
 html {
-  font-family: GillSans, Calibri, Trebuchet, sans-serif;
+  font-family: 'Ubuntu';
 }
 
 .card {
   padding-top: 0px;
   padding-bottom: 0px;
-  padding-left: 3px;
-  padding-right: 3px;
+  padding-left: 1px;
+  padding-right: 1px;
 }
