--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -19,7 +19,7 @@ html {
   align: center;
 }
 
-div.mdl-layout__drawer > nav.mdl-navigation > a.mdl-navigation__link {
+.material-icons {
     display: inline-flex;
     vertical-align: middle;
 }
