title/menu test

--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -23,3 +23,8 @@ html {
     display: inline-flex;
     vertical-align: middle;
 }
+
+.nav-wrapper {
+    display: inline-flex;
+    vertical-align: middle;
+}
