title/menu test

--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -14,12 +14,18 @@ html {
 }
 
 .nav-wrapper {
-  margin-top: 7px;
-  padding-top: 7px;
   padding-bottom: 80px;
   margin-bottom: 20px;
   align: center;
 }
+
+.nav {
+  margin-top: 7px;
+  padding-top: 7px;
+  align: center;
+}
+
+
 
 .valign {
   vertical-align: middle;
