--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -14,6 +14,7 @@ html {
 }
 
 .nav-wrapper {
+  height: 20%;
   padding-bottom: 80px;
   margin-bottom: 20px;
   align: center;
@@ -26,6 +27,7 @@ html {
 }
 
 .nav ul li {
+  height: 20%;
     float: right;
 }
 
