title/menu test

--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -40,5 +40,5 @@ html {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
