--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -44,7 +44,7 @@ nav .brand-logo {
     font-size: 4rem;
 }
 
-.no-pad {
-  padding-top: 0px;
-  padding-bottom: 0px;
+.small-pad {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
