--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -48,3 +48,10 @@ nav .brand-logo {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+img {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
