--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,11 +1,11 @@
 
 .primary{
-  color: #4E3200 !important;
+  color: #000 !important;
   background-color: #329A00 !important;
 }
 
 .highlight{
-  color: #FFFFFF !important;
+  color: #000 !important;
   background-color: #4E3200 !important;
 }
 
