kirsty font variants

--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -15,7 +15,7 @@
 }
 
 html {
-  font-family: "Kirsty Regular";
+  font-family: Kirsty Regular;
   src: url(http://www.princexml.com/fonts/larabie/kirsty.ttf) format("truetype");
 }
 
