--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,7 +1,7 @@
 
 .primary{
   color: #FFF !important;
-  background-color: #4E3200 !important;
+  background-color: #332000 !important;
 }
 
 .highlight{
