--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,4 +1,5 @@
 
+
 .primary{
   color: #FFF !important;
   background-color: #332000 !important;
@@ -18,6 +19,8 @@ html {
   font-family: Kirsty Regular;
   src: url(http://www.princexml.com/fonts/larabie/kirsty.ttf) format("truetype");
 }
+
+a:visited { color: blue; }
 
 .card {
   padding-top: 5px;
