--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -38,7 +38,7 @@ html {
   padding: 2px;
   font-size: 20px;
 }
-.page-footer a:link { color: blue; }
+.footer a:link { color: blue; }
 
 .footer-copyright {
   padding: 2px;
