--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -1,5 +1,3 @@
-
-
 .primary{
   color: #FFF !important;
   background-color: #332000 !important;
@@ -11,7 +9,7 @@
 }
 
 .title {
-  font-family: "Kirsty";
+  font-family: Kirsty;
   src: url(http://www.princexml.com/fonts/larabie/kirsty.ttf) format("truetype");
 }
 
@@ -38,6 +36,7 @@ html {
   padding: 2px;
   font-size: 20px;
 }
+
 .page-footer a:link { color: blue; }
 
 .footer-copyright {
@@ -64,6 +63,7 @@ html {
 
 .nav {
   align: center;
+  padding-right: 10px;
 }
 
 .nav ul li {
