--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -58,7 +58,7 @@ html {
 .nav-wrapper {
   padding-top: 0px;
   padding-bottom: 0px;
-  padding-right: 20px;
+  margin-left: 10px;
   align: center;
 }
 
