--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -10,7 +10,7 @@
 
 .title {
   font-family: Kirsty;
-  src: url(http://www.princexml.com/fonts/larabie/kirsty.ttf) format("truetype");
+  src: url(../fonts/kirsty/kirsty-bd.ttf) format("truetype");
 }
 
 html {
@@ -34,7 +34,7 @@ html {
 
 .page-footer {
   padding: 2px;
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 .page-footer a:link { color: blue; }
@@ -52,7 +52,7 @@ html {
 }
 
 .flow-text {
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 .nav-wrapper {
