local font version

--- a/test-html/material/css/puzzleduck.css
+++ b/test-html/material/css/puzzleduck.css
@@ -18,7 +18,7 @@
 
 @font-face {
     font-family: KirstyRegular;
-    src: url(../fonts/kirsty/kirsty-rg.ttf) format("truetype");
+    src: url(../fonts/kirsty/kirsty__.ttf) format("truetype");
 }
 
 .title {
